cs143.1x-compilers/assignments/PA3/cool.output
Terminals unused in grammar

   ERROR
   LETPREC


State 12 conflicts: 2 shift/reduce
State 14 conflicts: 2 shift/reduce
State 16 conflicts: 1 shift/reduce
State 21 conflicts: 1 shift/reduce
State 29 conflicts: 2 shift/reduce
State 141 conflicts: 9 shift/reduce
State 150 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list
    2        | error

    3 class_list: class
    4           | error ';'
    5           | class_list class
    6           | class_list error ';'

    7 class: CLASS TYPEID '{' feature_list '}' ';'
    8      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS TYPEID '{' error '}' ';'
   10      | CLASS error '{' feature_list '}' ';'
   11      | CLASS error '{' error '}' ';'

   12 feature_list: /* empty */
   13             | feature
   14             | feature_list feature
   15             | feature_list error ';'

   16 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   17        | OBJECTID ':' TYPEID ';'
   18        | OBJECTID ':' TYPEID ASSIGN expression ';'
   19        | error

   20 formal_list: /* empty */
   21            | formal
   22            | formal_list ',' formal

   23 formal: OBJECTID ':' TYPEID
   24       | '(' error ')'

   25 expression_list: expression ';'
   26                | expression_list expression ';'

   27 argument_list: /* empty */
   28              | expression
   29              | argument_list ',' expression

   30 expression: OBJECTID ASSIGN expression
   31           | expression '.' OBJECTID '(' argument_list ')'
   32           | expression '@' TYPEID '.' OBJECTID '(' argument_list ')'
   33           | OBJECTID '(' argument_list ')'
   34           | IF expression THEN expression ELSE expression FI
   35           | WHILE expression LOOP expression POOL
   36           | '{' expression_list '}'
   37           | LET OBJECTID ':' TYPEID IN expression
   38           | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   39           | CASE expression OF case_list ESAC
   40           | NEW TYPEID
   41           | ISVOID expression
   42           | expression '+' expression
   43           | expression '-' expression
   44           | expression '*' expression
   45           | expression '/' expression
   46           | '~' expression
   47           | expression '<' expression
   48           | expression LE expression
   49           | expression '=' expression
   50           | NOT expression
   51           | '(' expression ')'
   52           | OBJECTID
   53           | INT_CONST
   54           | STR_CONST
   55           | BOOL_CONST

   56 case_list: case
   57          | case_list case

   58 case: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 24 31 32 33 51
')' (41) 16 24 31 32 33 51
'*' (42) 44
'+' (43) 42
',' (44) 22 29
'-' (45) 43
'.' (46) 31 32
'/' (47) 45
':' (58) 16 17 18 23 37 38 58
';' (59) 4 6 7 8 9 10 11 15 16 17 18 25 26 58
'<' (60) 47
'=' (61) 49
'@' (64) 32
'{' (123) 7 8 9 10 11 16 36
'}' (125) 7 8 9 10 11 16 36
'~' (126) 46
error (256) 2 4 6 9 10 11 15 19 24
CLASS (258) 7 8 9 10 11
ELSE (259) 34
FI (260) 34
IF (261) 34
IN (262) 37 38
INHERITS (263) 8
LET (264) 37 38
LOOP (265) 35
POOL (266) 35
THEN (267) 34
WHILE (268) 35
CASE (269) 39
ESAC (270) 39
OF (271) 39
DARROW (272) 58
NEW (273) 40
ISVOID (274) 41
STR_CONST (275) 54
INT_CONST (276) 53
BOOL_CONST (277) 55
TYPEID (278) 7 8 9 16 17 18 23 32 37 38 40 58
OBJECTID (279) 16 17 18 23 30 31 32 33 37 38 52 58
ASSIGN (280) 18 30 38
NOT (281) 50
LE (282) 48
ERROR (283)
LETPREC (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1 2, on right: 0
class_list (48)
    on left: 3 4 5 6, on right: 1 5 6
class (49)
    on left: 7 8 9 10 11, on right: 3 5
feature_list (50)
    on left: 12 13 14 15, on right: 7 8 10 14 15
feature (51)
    on left: 16 17 18 19, on right: 13 14
formal_list (52)
    on left: 20 21 22, on right: 16 22
formal (53)
    on left: 23 24, on right: 21 22
expression_list (54)
    on left: 25 26, on right: 26 36
argument_list (55)
    on left: 27 28 29, on right: 29 31 32 33
expression (56)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55, on right: 16 18 25 26 28 29 30 31 32 34
    35 37 38 39 41 42 43 44 45 46 47 48 49 50 51 58
case_list (57)
    on left: 56 57, on right: 39 57
case (58)
    on left: 58, on right: 56 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    2 program: error .
    4 class_list: error . ';'

    ';'  shift, and go to state 6

    $default  reduce using rule 2 (program)


state 2

    7 class: CLASS . TYPEID '{' feature_list '}' ';'
    8      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS . TYPEID '{' error '}' ';'
   10      | CLASS . error '{' feature_list '}' ';'
   11      | CLASS . error '{' error '}' ';'

    error   shift, and go to state 7
    TYPEID  shift, and go to state 8


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: class_list .
    5 class_list: class_list . class
    6           | class_list . error ';'

    error  shift, and go to state 10
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 11


state 5

    3 class_list: class .

    $default  reduce using rule 3 (class_list)


state 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


state 7

   10 class: CLASS error . '{' feature_list '}' ';'
   11      | CLASS error . '{' error '}' ';'

    '{'  shift, and go to state 12


state 8

    7 class: CLASS TYPEID . '{' feature_list '}' ';'
    8      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS TYPEID . '{' error '}' ';'

    INHERITS  shift, and go to state 13
    '{'       shift, and go to state 14


state 9

    0 $accept: program $end .

    $default  accept


state 10

    6 class_list: class_list error . ';'

    ';'  shift, and go to state 15


state 11

    5 class_list: class_list class .

    $default  reduce using rule 5 (class_list)


state 12

   10 class: CLASS error '{' . feature_list '}' ';'
   11      | CLASS error '{' . error '}' ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17

    error     [reduce using rule 12 (feature_list)]
    OBJECTID  [reduce using rule 12 (feature_list)]
    '}'       reduce using rule 12 (feature_list)

    feature_list  go to state 18
    feature       go to state 19


state 13

    8 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 20


state 14

    7 class: CLASS TYPEID '{' . feature_list '}' ';'
    9      | CLASS TYPEID '{' . error '}' ';'

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 17

    error     [reduce using rule 12 (feature_list)]
    OBJECTID  [reduce using rule 12 (feature_list)]
    '}'       reduce using rule 12 (feature_list)

    feature_list  go to state 22
    feature       go to state 19


state 15

    6 class_list: class_list error ';' .

    $default  reduce using rule 6 (class_list)


state 16

   11 class: CLASS error '{' error . '}' ';'
   19 feature: error .

    '}'  shift, and go to state 23

    '}'       [reduce using rule 19 (feature)]
    $default  reduce using rule 19 (feature)


state 17

   16 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   17        | OBJECTID . ':' TYPEID ';'
   18        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 24
    ':'  shift, and go to state 25


state 18

   10 class: CLASS error '{' feature_list . '}' ';'
   14 feature_list: feature_list . feature
   15             | feature_list . error ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 27

    feature  go to state 28


state 19

   13 feature_list: feature .

    $default  reduce using rule 13 (feature_list)


state 20

    8 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 29


state 21

    9 class: CLASS TYPEID '{' error . '}' ';'
   19 feature: error .

    '}'  shift, and go to state 30

    '}'       [reduce using rule 19 (feature)]
    $default  reduce using rule 19 (feature)


state 22

    7 class: CLASS TYPEID '{' feature_list . '}' ';'
   14 feature_list: feature_list . feature
   15             | feature_list . error ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 31

    feature  go to state 28


state 23

   11 class: CLASS error '{' error '}' . ';'

    ';'  shift, and go to state 32


state 24

   16 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 33
    '('       shift, and go to state 34

    $default  reduce using rule 20 (formal_list)

    formal_list  go to state 35
    formal       go to state 36


state 25

   17 feature: OBJECTID ':' . TYPEID ';'
   18        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 37


state 26

   15 feature_list: feature_list error . ';'
   19 feature: error .

    ';'  shift, and go to state 38

    $default  reduce using rule 19 (feature)


state 27

   10 class: CLASS error '{' feature_list '}' . ';'

    ';'  shift, and go to state 39


state 28

   14 feature_list: feature_list feature .

    $default  reduce using rule 14 (feature_list)


state 29

    8 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 40
    OBJECTID  shift, and go to state 17

    error     [reduce using rule 12 (feature_list)]
    OBJECTID  [reduce using rule 12 (feature_list)]
    '}'       reduce using rule 12 (feature_list)

    feature_list  go to state 41
    feature       go to state 19


state 30

    9 class: CLASS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 42


state 31

    7 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 43


state 32

   11 class: CLASS error '{' error '}' ';' .

    $default  reduce using rule 11 (class)


state 33

   23 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 44


state 34

   24 formal: '(' . error ')'

    error  shift, and go to state 45


state 35

   16 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   22 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 46
    ','  shift, and go to state 47


state 36

   21 formal_list: formal .

    $default  reduce using rule 21 (formal_list)


state 37

   17 feature: OBJECTID ':' TYPEID . ';'
   18        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 48
    ';'     shift, and go to state 49


state 38

   15 feature_list: feature_list error ';' .

    $default  reduce using rule 15 (feature_list)


state 39

   10 class: CLASS error '{' feature_list '}' ';' .

    $default  reduce using rule 10 (class)


state 40

   19 feature: error .

    $default  reduce using rule 19 (feature)


state 41

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   14 feature_list: feature_list . feature
   15             | feature_list . error ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 50

    feature  go to state 28


state 42

    9 class: CLASS TYPEID '{' error '}' ';' .

    $default  reduce using rule 9 (class)


state 43

    7 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


state 44

   23 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 51


state 45

   24 formal: '(' error . ')'

    ')'  shift, and go to state 52


state 46

   16 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 53


state 47

   22 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 33
    '('       shift, and go to state 34

    formal  go to state 54


state 48

   18 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 69


state 49

   17 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 17 (feature)


state 50

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 70


state 51

   23 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 23 (formal)


state 52

   24 formal: '(' error ')' .

    $default  reduce using rule 24 (formal)


state 53

   16 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 71


state 54

   22 formal_list: formal_list ',' formal .

    $default  reduce using rule 22 (formal_list)


state 55

   34 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 72


state 56

   37 expression: LET . OBJECTID ':' TYPEID IN expression
   38           | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression

    OBJECTID  shift, and go to state 73


state 57

   35 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 74


state 58

   39 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 75


state 59

   40 expression: NEW . TYPEID

    TYPEID  shift, and go to state 76


state 60

   41 expression: ISVOID . expression

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 77


state 61

   54 expression: STR_CONST .

    $default  reduce using rule 54 (expression)


state 62

   53 expression: INT_CONST .

    $default  reduce using rule 53 (expression)


state 63

   55 expression: BOOL_CONST .

    $default  reduce using rule 55 (expression)


state 64

   30 expression: OBJECTID . ASSIGN expression
   33           | OBJECTID . '(' argument_list ')'
   52           | OBJECTID .

    ASSIGN  shift, and go to state 78
    '('     shift, and go to state 79

    $default  reduce using rule 52 (expression)


state 65

   50 expression: NOT . expression

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 80


state 66

   46 expression: '~' . expression

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 81


state 67

   36 expression: '{' . expression_list '}'

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression_list  go to state 82
    expression       go to state 83


state 68

   51 expression: '(' . expression ')'

    IF          shift, and go to state 55
    LET         shift, and go to state 56
    WHILE       shift, and go to state 57
    CASE        shift, and go to state 58
    NEW         shift, and go to state 59
    ISVOID      shift, and go to state 60
    STR_CONST   shift, and go to state 61
    INT_CONST   shift, and go to state 62
    BOOL_CONST  shift, and go to state 63
    OBJECTID    shift, and go to state 64
    NOT         shift, and go to state 65
    '~'         shift, and go to state 66
    '{'         shift, and go to state 67
    '('         shift, and go to state 68

    expression  go to state 84


state 69

   18 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   31 expression: expression . '.' OBJECTID '(' argument_list ')'
   32           | expression . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . LE expression
   49           | expression . '=' expression

    LE   shift, and go to state 85
    '<'  shift, and go to state 86
    '='  shift, and go to state 87
    '+'  shift, and go to state 88
    '-'  shift, and go to state 89
    '*'  shift, and go to state 90
    '/'  shift, and go to state 91
    '@'  shift, and go to state 92
    '.'  shift, and go to state 93
    ';'  shift, and go to state 94


state 70

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 8 (class)


state 71

   16 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 95


state 72

   31 expression: expression . '.' OBJECTID '(' argument_list ')'
   32           | expression . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   34           | IF expression . THEN expression ELSE expression FI
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . LE expression
   49           | expression . '=' expression

    THEN  shift, and go to state 96
    LE    shift, and go to state 85
    '<'   shift, and go to state 86
    '='   shift, and go to state 87
    '+'   shift, and go to state 88
    '-'   shift, and go to state 89
    '*'   shift, and go to state 90
    '/'   shift, and go to state 91
    '@'   shift, and go to state 92
    '.'   shift, and go to state 93


state 73

   37 expression: LET OBJECTID . ':' TYPEID IN expression
   38           | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression

    ':'  shift, and go to state 97


state 74

   31 expression: expression . '.' OBJECTID '(' argument_list ')'
   32           | expression . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   35           | WHILE expression . LOOP expression POOL
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . LE expression
   49           | expression . '=' expression

    LOOP  shift, and go to state 98
    LE    shift, and go to state 85
    '<'   shift, and go to state 86
    '='   shift, and go to state 87
    '+'   shift, and go to state 88
    '-'   shift, and go to state 89
    '*'   shift, and go to state 90
    '/'   shift, and go to state 91
    '@'   shift, and go to state 92
    '.'   shift, and go to state 93


state 75

   31 expression: expression . '.' OBJECTID '(' argument_list ')'
   32           | expression . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   39           | CASE expression . OF case_list ESAC
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . LE expression
   49           | expression . '=' expression

    OF   shift, and go to state 99
    LE   shift, and go to state 85
    '<'  shift, and go to state 86
    '='  shift, and go to state 87
    '+'  shift, and go to state 88
    '-'  shift, and go to state 89
    '*'  shift, and go to state 90
    '/'  shift, and go to state 91
    '@'  shift, and go to state 92
    '.'  shift, and go to state 93


state 76

   40 expression: NEW TYPEID .

    $default  reduce using rule 40 (expression)


state 77

   31 expression: expression . '.' OBJECTID '(' argument_list ')'
   32           | expression . '@' TYPEID '.' OBJECTID '(' argument_list ')'
   41           | ISVOID expression .
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . LE expression
   49           | expression . '=' expression

    '@'  shift, and go to state 92
    '.'  shift, and go to state 93

    $default  reduce using rule 41 (expression)


state 78

   30 expression: OBJECTID ASSIGN . expression
